After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655788 - empathy-auth-client crashed with SIGABRT in __kernel_vsyscall()
empathy-auth-client crashed with SIGABRT in __kernel_vsyscall()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Auth client
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
: 643097 649383 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-08-02 10:03 UTC by Oleksij Rempel
Modified: 2011-08-03 20:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch v1 (712 bytes, patch)
2011-08-02 10:04 UTC, Oleksij Rempel
committed Details | Review

Description Oleksij Rempel 2011-08-02 10:03:19 UTC
empathy-auth-client crashes on every empathy start with fallowing message:

G_SLICE=debug-blocks /usr/lib/empathy/empathy-auth-client

(empathy-auth-client:681): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref 0xb730fc30(0x9de3820)

(empathy-auth-client:681): GLib-GObject-WARNING **: /build/buildd/glib2.0-2.29.14/./gobject/gclosure.c:698: unable to remove uninstalled invalidation notifier: 0xb730fb50 (0x9de3820)

(empathy-auth-client:681): GLib-GObject-WARNING **: instance of invalid non-instantiatable type `move_focus'

(empathy-auth-client:681): GLib-GObject-CRITICAL **: g_signal_handler_disconnect: assertion `G_TYPE_CHECK_INSTANCE (instance)' failed

(empathy-auth-client:681): GLib-GObject-CRITICAL **: g_object_weak_unref: assertion `G_IS_OBJECT (object)' failed
GSlice: MemChecker: attempt to release non-allocated block: 0x9de3820 size=16
Abgebrochen (Speicherabzug geschrieben)
Comment 1 Oleksij Rempel 2011-08-02 10:04:12 UTC
Created attachment 193042 [details] [review]
patch v1

This patch fixes this crash.
Comment 2 Guillaume Desmottes 2011-08-02 11:12:19 UTC
*** Bug 643097 has been marked as a duplicate of this bug. ***
Comment 3 Guillaume Desmottes 2011-08-02 11:13:32 UTC
*** Bug 649383 has been marked as a duplicate of this bug. ***
Comment 4 Guillaume Desmottes 2011-08-02 11:21:45 UTC
My hero ! I was tracking this bug since a while and of course didn't think about such stupid mistake. Thanks a lot !
Comment 5 Oleksij Rempel 2011-08-03 20:51:43 UTC
You are welcome! :)