empathy_server_sasl_handler_class_init: properly initialize the dispose function

https://bugzilla.gnome.org/show_bug.cgi?id=655788